tests/reference/asr_openmp-openmp_44-1c0f6fe.stderr
semantic error: The clause variable `tid)` is not declared or not a variable
  --> tests/../integration_tests/openmp_44.f90:26:3
   |
26 |   !$omp parallel sections reduction(+:tid)
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
